--- a/docker/rust/Dockerfile
+++ b/docker/rust/Dockerfile
@@ -1,3 +1,10 @@
 FROM rust:1.63.0-slim-bullseye
 
+RUN apt update -yqq && \
+    apt install -yqq \
+      cmake \
+      g++ \
+      libssl-dev \
+      pkg-config
+
 WORKDIR /application
